Added part with certificates for lab 7

--- a/Reports/7.md
+++ b/Reports/7.md
@@ -29,3 +29,6 @@ Even after enabling in windows settings, got nothing
 
 ![image](https://user-images.githubusercontent.com/42899572/149640866-e12d6ddf-8d76-4956-9c68-3174ea7c75c8.png)
 
+On the second picture you can see that we already have valid certificate, it was automatically made by framework. But we made another one for localhost using mkcert.
+![image](https://user-images.githubusercontent.com/42899572/149670302-259b0cac-5e90-4ec9-87ee-72d6cfc80f0f.png)
+![image](https://user-images.githubusercontent.com/42899572/149670377-12e277af-7d60-48c2-a594-b663faf1a8aa.png)
